project('acmicpc-cpp11', 'cpp',
    version: '0.2.0',
    meson_version: '>= 0.59.0',
    default_options: [
    'werror=true',
    'warning_level=2',
    'cpp_std=c++11'
    ])

fs = import('fs')
cp = find_program('cp')


subdir('2438')
subdir('2738')
subdir('2739')
subdir('2741')
subdir('2743')
subdir('2744')
subdir('2753')
subdir('4101')
subdir('10818')
subdir('11718')
subdir('14681')
subdir('25083')
subdir('5597')
subdir('9086')
subdir('9498')
subdir('10807')
subdir('10809')
subdir('10871')
subdir('10872')
subdir('10950')
subdir('4999')
subdir('2754')
subdir('1264')
subdir('2439')
subdir('2440')
subdir('10808')
subdir('11365')
subdir('11720')
subdir('11945')
subdir('15552')
subdir('1085')
subdir('1247')
subdir('2061')
subdir('1267')
subdir('1598')
subdir('1284')
subdir('3460')
subdir('2501')
subdir('2460')
subdir('1837')
subdir('6974')
subdir('2052')
subdir('2562')
subdir('5988')
subdir('4328')
subdir('10870')
subdir('2547')
subdir('6378')
subdir('2675')
subdir('2920')
subdir('8958')
subdir('10952')
subdir('10951')
subdir('1152')
subdir('1157')
