project('acmicpc-cpp11', 'cpp',
    version: '0.2.0',
    meson_version: '>= 0.59.0',
    default_options: [
    'werror=true',
    'warning_level=2',
    'cpp_std=c++11'
    ])

fs = import('fs')
cp = find_program('cp')


subdir('2438')
subdir('2738')
subdir('2739')
subdir('2741')
subdir('2743')
subdir('2744')
subdir('2753')
subdir('4101')
subdir('10818')
subdir('11718')
subdir('14681')
subdir('25083')
subdir('5597')
subdir('9086')
subdir('9498')
subdir('10807')
subdir('10809')
subdir('10871')
subdir('10872')
subdir('10950')
subdir('4999')
subdir('2754')
subdir('1264')
subdir('2439')
subdir('2440')
subdir('10808')
subdir('11365')
subdir('11720')
subdir('11945')
subdir('15552')
subdir('1085')
subdir('1247')
subdir('2061')
subdir('1267')
subdir('1598')
subdir('1284')
subdir('3460')
subdir('2501')
subdir('2460')
subdir('1837')
subdir('6974')
subdir('2052')
subdir('2562')
subdir('5988')
subdir('4328')
subdir('10870')
subdir('2547')
subdir('6378')
subdir('2675')
subdir('2920')
subdir('8958')
subdir('10952')
subdir('10951')
subdir('1152')
subdir('1157')
subdir('2577')
subdir('2908')
subdir('3052')
subdir('1259')
subdir('2690')
subdir('2775')
subdir('10989')
subdir('11050')
subdir('2884')
subdir('2742')
subdir('4153')
subdir('15829')
subdir('2798')
subdir('2292')
subdir('2231')
subdir('10250')
subdir('6976')
subdir('10093')
subdir('1009')
subdir('3566')
subdir('11021')
subdir('11022')
subdir('1037')
subdir('1181')
subdir('1436')
subdir('1978')
subdir('2869')
subdir('11866')
subdir('7568')
subdir('11650')
subdir('11651')
subdir('10814')
subdir('1920')
subdir('2164')
subdir('10816')
subdir('10773')
subdir('10828')
subdir('2839')
subdir('9012')
subdir('4949')
subdir('10845')
subdir('10866')
subdir('1018')
subdir('1244')
subdir('11723')
subdir('14936')
subdir('1015')
subdir('1021')
subdir('1622')
subdir('2870')
subdir('2090')
subdir('17219')
subdir('1094')
subdir('4604')
subdir('25238')
subdir('1929')
subdir('1183')
subdir('1966')
subdir('2108')
subdir('2910')
subdir('17264')
subdir('1654')
subdir('2805')
subdir('1874')
subdir('18111')
subdir('2792')
subdir('16401')
subdir('1003')
subdir('1764')
subdir('1620')
subdir('15810')
subdir('17252')
subdir('17253')
subdir('17254')
subdir('18870')
subdir('11659')
subdir('5525')
subdir('5585')
subdir('18312')
subdir('11047')
subdir('11399')
subdir('1931')
subdir('1541')
subdir('6064')
subdir('1439')
subdir('2437')
subdir('11497')
subdir('13884')
subdir('1946')
subdir('1263')
subdir('20915')
subdir('1105')
subdir('3655')
subdir('2810')
subdir('1074')
subdir('9375')
subdir('5430')
subdir('1260')
subdir('1303')
subdir('2853')
subdir('1012')
subdir('1051')
subdir('1026')
